--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,73 @@ header{
 	font-weight: bolder;
 }
 
+@media(min-width : 1280px ){
+
+
+	/* home  */
+	.container{
+		flex-direction: row;
+	}
+	.top{
+		display: flex;
+		flex-direction: column;
+		margin: 0;
+		margin-top: 10%;
+		margin-left: 7%;
+		width: 60%;
+	}
+	.top h1{
+		font-size: 65px;
+	}
+	.more{
+		margin-top: 20%;
+		margin-left: 10%;
+		gap: 10px;
+	}
+	.more a{
+		color: #00e2ff;
+		font-size:50px;
+	}
+	.more img{
+		width: 120px;
+	}
+
+	.join{
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+	}
+
+	.fleche{
+		width: 70%;
+		margin-top: 10%;
+		margin-left: 33%;
+
+	}
+	.fleche img{
+		margin: 0;
+	}
+
+	.joinus{
+		width: 35%;
+		text-align: center;
+		padding: 3%;	
+		margin: 0;
+
+	}
+	
+	.joinus a{
+		color: #00e2ff;
+		font-size: 60px;
+		font-weight: bolder;
+	}
+
+}
+
+
+
+
+
 /* about us  */
  .about{
 	width: 100%;
@@ -175,6 +242,51 @@ margin-top: 15%;
 	display: flex;
 	justify-content: space-evenly;
 } 
+
+
+@media(min-width : 1280px ){
+
+/* about us  */	
+	.title{
+		width: 20%;
+		margin-left: 30%;
+		margin-bottom: 0;
+		
+	}
+	.title h1{
+	margin-top: 40%;
+	font-size: 50px;
+
+	}
+	.title hr{
+		width: 100%;
+	}
+	
+	.both{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		height: 80%;
+	}
+	.parg{
+		margin: 0;
+		font-size: 50px;
+		width: 60%;
+		margin-left: 10%;
+		padding-top: 5%;
+	}
+	.cercle img{
+		height: 250px;
+	
+	}
+	.cercle{
+		padding-top:0;
+		flex-direction: column;
+		justify-content: space-between;
+		margin-right: 5%;
+	} 
+}
+
 
 /* clients */
 
