--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-@font-face{
-	font-family:'Italianno' ;
-	font-family:'ustAnotherHand' ;
+@font-face {
+	font-family: 'Italianno';
+	font-family: 'JustAnotherHand';
 	src: url(../font/Italianno-Regular.ttf);
 	src: url(../font/JustAnotherHand-Regular.ttf);
 }
-*{
+
+* {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
@@ -16,13 +17,14 @@
 
 
 
-header{
+header {
 	position: sticky;
 	top: 0;
 	z-index: 1000;
 }
+
 /* navbar  */
-.navbar{
+.navbar {
 	background-color: black;
 	min-height: 70px;
 	display: flex;
@@ -32,22 +34,22 @@ header{
 
 }
 
-.nav{
+.nav {
 	display: flex;
 	align-items: center;
-	gap : 30px;
+	gap: 30px;
 }
 
-.nav a:hover{
-	color : #00e2ff;
+.nav a:hover {
+	color: #00e2ff;
 }
 
-.burger{
+.burger {
 	display: none;
 	cursor: pointer;
 }
 
-.bar{
+.bar {
 	display: block;
 	width: 25px;
 	height: 5px;
@@ -57,138 +59,153 @@ header{
 	background-color: white;
 }
 
-@media(max-width : 768px){
-	.burger{
+@media(max-width : 768px) {
+	.burger {
 		display: block;
 	}
-	.burger.active .bar:nth-child(3){
+
+	.burger.active .bar:nth-child(2) {
 		opacity: 0;
 	}
-	.burger.active .bar:nth-child(1){
-		transform: translateY(8px) rotate(90deg);
+
+	.burger.active .bar:nth-child(1) {
+		transform: translateY(8px) rotate(45deg);
 	}
-	.nav{
+	.burger.active .bar:nth-child(3) {
+		transform: translateY(-8px) rotate(-45deg);
+	}
+
+	.nav {
 		position: fixed;
 		right: -100%;
-		top:70px;
+		top: 70px;
 		flex-direction: column;
 		background-color: black;
-		gap:80px;
+		gap: 80px;
 		width: 40%;
 		height: 45%;
 	}
-	.nav.active{
-		right:10px;
+
+	.nav.active {
+		right: 10px;
 	}
 }
 
 /* home  */
-.home{
+.home {
 	width: 100%;
-	height: 100vh;
-	background-image:url(../img/bcka.jpg);
+	height: fit-content;
+	background-image: url(../img/bcka.jpg);
 	background-size: cover;
 }
-.container{
+
+.container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
-.top{
+
+.top {
 	margin-top: 20%;
 }
-.more{
+
+.more {
 	display: flex;
 	align-items: center;
 	margin-top: 10%;
 	margin-left: 10%;
 	gap: 10px;
 }
-.more a{
+
+.more a {
 	color: #00e2ff;
-	font-size:x-large;
+	font-size: x-large;
 }
 
-.fleche img{
+.fleche img {
 	transform: rotate(45deg);
 	margin-left: 60%;
 	margin-top: 40%;
 	width: 70%;
 }
 
-.joinus{
+.joinus {
 	border: 3px solid #00e2ff;
-	width: 40%;
+	width: 100%;
 	background: rgba(255, 255, 255, 0.1);
 	text-align: center;
-	padding: 5%;	
+	padding: 5%;
 	margin-right: 30%;
 }
 
-.joinus a{
+.joinus a {
 	color: #00e2ff;
 	font-size: 25px;
 	font-weight: bolder;
 }
 
-@media(min-width : 1280px ){
-
+@media(min-width: 1024px) {
 
 	/* home  */
-	.container{
+	.container {
 		flex-direction: row;
 	}
-	.top{
+
+	.top {
 		display: flex;
 		flex-direction: column;
 		margin: 0;
-		margin-top: 10%;
 		margin-left: 7%;
 		width: 60%;
 	}
-	.top h1{
-		font-size: 65px;
+
+	.top h1 {
+		font-size: 45px;
 	}
-	.more{
-		margin-top: 20%;
+
+	.more {
+		margin-top: 40%;
 		margin-left: 10%;
 		gap: 10px;
 	}
-	.more a{
+
+	.more a {
 		color: #00e2ff;
-		font-size:50px;
-	}
-	.more img{
-		width: 120px;
+		font-size: 40px;
 	}
 
-	.join{
+	.more img {
+		width: 80px;
+	}
+
+	.join {
 		display: flex;
 		flex-direction: column;
 		width: 70%;
 	}
 
-	.fleche{
+	.fleche {
 		width: 70%;
-		margin-top: 10%;
-		margin-left: 33%;
+		margin-top: 5%;
+		margin-left: 25%;
 
 	}
-	.fleche img{
+
+	.fleche img {
 		margin: 0;
 	}
 
-	.joinus{
+	.joinus {
 		width: 35%;
 		text-align: center;
-		padding: 3%;	
+		padding: 3%;
 		margin: 0;
 
 	}
-	
-	.joinus a{
+
+	.joinus a {
 		color: #00e2ff;
-		font-size: 60px;
+		font-size: 45px;
 		font-weight: bolder;
 	}
 
@@ -199,327 +216,607 @@ header{
 
 
 /* about us  */
- .about{
+.about {
 	width: 100%;
-	height: 100vh;
-	background-image:url(../img/bcka2.jpg);
-	background-size:cover;
+	/* height: 100vh; */
+	height: fit-content;
+	background-image: url(../img/bcka2.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
-.title{
+.title {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-bottom: 5%;
 }
 
-.title h1{
-margin-top: 15%;
+.title h1 {
+	margin-top: 15%;
 
 }
-.title hr{
+
+.title hr {
 	border: 2px solid #00e2ff;
 	width: 35%;
 }
 
-.both{
+.both {
 	display: flex;
 	flex-direction: column;
 }
-.parg{
+
+.parg {
 	font-size: 25px;
 	width: 85%;
-    margin-left: 10%;	
+	margin-left: 10%;
 }
-.cercle img{
+
+.cercle img {
 	border: 3px solid #00e2ff;
 	border-radius: 100%;
 	height: 170px;
 
 }
-.cercle{
+
+.cercle {
 	padding-top: 15%;
+	padding-bottom: 10%;
+
 	display: flex;
 	justify-content: space-evenly;
-} 
+}
 
 
-@media(min-width : 1280px ){
+@media(min-width: 1024px) {
 
-/* about us  */	
-	.title{
+	/* about us  */
+	.about {
+		width: 100%;
+		height: fit-content;
+		background-image: url(../img/bcka2.jpg);
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+
+	.title {
 		width: 20%;
 		margin-left: 30%;
 		margin-bottom: 0;
-		
-	}
-	.title h1{
-	margin-top: 40%;
-	font-size: 50px;
 
 	}
-	.title hr{
+
+	.title h1 {
+		margin-top: 20%;
+		font-size: 50px;
+
+	}
+
+	.title hr {
 		width: 100%;
 	}
-	
-	.both{
+
+	.both {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		height: 80%;
+		height: 100%;
 	}
-	.parg{
+
+	.parg {
 		margin: 0;
-		font-size: 50px;
+		font-size: 35px;
 		width: 60%;
 		margin-left: 10%;
 		padding-top: 5%;
 	}
-	.cercle img{
-		height: 250px;
-	
+
+	.cercle img {
+		height: 200px;
+
 	}
-	.cercle{
-		padding-top:0;
+
+	.cercle {
+		padding-top: 0;
 		flex-direction: column;
 		justify-content: space-between;
 		margin-right: 5%;
-	} 
+		margin-bottom: 10%;
+	}
 }
 
 
 /* clients */
 
-.clients{
+.clients {
 	width: 100%;
-	height: 100vh;
+	height: fit-content;
 	background-color: black;
-	background-size:cover;
+	background-size: cover;
 }
 
-.arrow{
+.arrow {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	margin-top: 20%;
 }
-.arrow img{
+
+.arrow img {
 	cursor: pointer;
 }
-.slide{
+
+.slide {
 	background: rgba(255, 255, 255, 0.2);
 	display: flex;
 	flex-direction: column;
-	gap:20px;
+	gap: 20px;
 	width: 100%;
 	display: none;
 }
 
-.prfl{
+.prfl {
 	display: flex;
 	justify-content: center;
 	padding: 5%;
 }
 
-.prfl img{
+.prfl img {
 	width: 50%;
 }
 
-.review{
+.review {
 	display: flex;
 	justify-content: center;
 }
-.review p{
+
+.review p {
 	width: 65%;
 	text-align: center;
 	font-size: 20px;
 }
 
-.names{
+.names {
 	color: #00e2ff;
 	font-family: 'Italianno';
 	font-size: 30px;
 	margin-left: 50%;
 }
 
-.second{
+.second {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
+
 }
-.star{
+
+.star {
 	display: flex;
 	justify-content: center;
 	margin-top: 5%;
 	margin-bottom: 15%;
 }
-.star img{
+
+.star img {
 	width: 60px;
 }
-.joinuss{
+
+.joinuss {
 	border: 3px solid #00e2ff;
 	width: 50%;
 	text-align: center;
-	padding: 3%;	
+	padding: 3%;
 
 }
 
-.joinuss a{
+.joinuss a {
 	font-size: 35px;
 	font-family: "ustAnotherHand";
 }
 
+/* clients */
+
+@media(min-width: 1024px) {
+	.clients {
+		width: 100%;
+		height: fit-content;
+		background-image: url(../img/bck3.jpg);
+		background-size: cover;
+	}
+
+	.arrow {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		margin-top: 5%;
+		margin-left: 15%;
+
+	}
+
+	.title {
+		width: 25%;
+		margin-left: 25%;
+		margin-bottom: 0;
+	}
+
+	.title h1 {
+		margin-top: 20%;
+		font-size: 40px;
+
+	}
+
+	.title hr {
+		width: 100%;
+	}
+
+
+	.slide {
+		background: rgba(255, 255, 255, 0.2);
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		width: 40%;
+		display: none;
+		margin: 0;
+	}
+
+	.prfl {
+		display: flex;
+		justify-content: center;
+		padding: 5%;
+	}
+
+	.prfl img {
+		width: 50%;
+	}
+
+	.review {
+		display: flex;
+		justify-content: center;
+	}
+
+	.review p {
+		width: 65%;
+		text-align: center;
+		font-size: 20px;
+	}
+
+
+	.second {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		margin-left: 25%;
+		gap: 70px;
+
+	}
+
+	.star {
+		display: flex;
+		justify-content: flex-start;
+		margin: 0;
+		margin-top: 3%;
+	}
+
+	.star img {
+		width: 60px;
+	}
+
+	.joinuss {
+		border: 3px solid #00e2ff;
+		width: 30%;
+		text-align: center;
+		padding: 2%;
+		margin-bottom: 5%;
+	}
+
+	.joinuss a {
+		font-size: 35px;
+		font-family: "ustAnotherHand";
+	}
+
+}
+
+
+
 /* faq  */
 
-.qsts{
+
+.questions {
+	width: 100%;
+	height: fit-content;
+	background-color: black;
+	background-size: cover;
+}
+
+.titlef {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 5%;
+}
+
+.titlef h1 {
+	margin-top: 15%;
+}
+
+.titlef hr {
+	border: 2px solid #00e2ff;
+	width: 15%;
+}
+
+.qsts {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	width: 80%;
-	margin:auto;
-	margin-top: 10%;
-	padding-bottom: 10%;
+	margin: auto;
+	margin-top: 5%;
+	padding-bottom: 5%;
 	border-bottom: 3px solid #00e2ff;
 }
-.qsts span{
+
+.qsts span {
 	font-size: 25px;
 	width: 65%;
 }
-.qsts img{
+
+.qsts img {
 	width: 5%;
-	right: 0px; 
-	cursor: pointer; 
+	right: 0px;
+	cursor: pointer;
 }
-.answer{
+
+.answer {
 	display: none;
 	font-size: 20px;
 	width: 80%;
 	margin: auto;
 	margin-top: 5%;
+	padding-bottom: 3%;
 }
 
+@media(min-width: 1024px) {
+
+	/* faq  */
+
+	.all{
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
+	.questions {
+		width: 100%;
+		height: fit-content;
+		background-image: url(../img/backgh.jpg);
+		background-size: cover;
+	}
+
+	.titlef {
+		align-self: center;
+	}
+
+	.titlef h1 {
+		font-size: 40px;
+
+	}
+
+	.titlef hr {
+		border: 2px solid #00e2ff;
+		width: 100%;
+	}
+	.alinall{
+		width: 70%;
+	}
+	.qsts {
+
+		padding-bottom: 3%;
+		border-bottom: 3px solid #00e2ff;
+	}
+
+	.qsts span {
+		font-size: 35px;
+		width: 80%;
+	}
+
+	.qsts img {
+		width: 5%;
+		right: 0px;
+		cursor: pointer;
+	}
+
+	.answer {
+		display: none;
+		font-size: 30px;
+
+	}
+}
+
+
+
+
+
 /* Programs */
-.program,.plans,.register{
+.program,
+.plans,
+.register {
 	background-color: black;
 }
 
-.prog{
+.prog {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-.progtitle h1{
+.progtitle h1 {
 	color: white;
 	text-align: center;
 	margin-top: 20%;
 	margin-bottom: 15%;
 }
-.progtitle span{
-	color:#00e2ff;
+
+.progtitle span {
+	color: #00e2ff;
 }
-.card{
+
+.card {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-top: 10%;
 	margin-bottom: 10%;
-}
-.picc{
+} 
+
+.picc {
 	display: flex;
 	justify-content: center;
 }
-.picc img{
-	width: 300px;	
+
+.picc img {
+	width: 300px;
+	height: 200px;
 }
-.descrp{
+
+.descrp {
 	background: rgba(255, 255, 255, 0.7);
 	width: 300px;
 	padding: 3%;
 }
 
-.descrp h2{
-	color: black;
-	font-size: 20px;
-	text-align: center;
-}
-.descrp span{
+.descrp h2 {
 	color: black;
 	font-size: 20px;
 	text-align: center;
 }
 
-.desc{
+.descrp span {
+	color: black;
+	font-size: 20px;
+	text-align: center;
+}
+
+.desc {
 	margin: auto;
 	width: 62%;
 	text-align: center;
 }
-span.viewmore{
+
+span.viewmore {
 	margin-left: 60%;
 	text-decoration: underline;
 	font-weight: bolder;
 	color: #FA1010;
 }
 
-.viewp{
+.viewp {
 	display: none;
 	cursor: pointer;
+	font-size: 20px;
+	width: 50%;
+	margin: auto;
+	margin-top: 5%;
 }
+
+
+/* programs */
+
+@media(min-width: 1024px) {
+	.program {
+		width: 100%;
+		height: fit-content;
+		background-image: url(../img/sb.jpg);
+		background-size: cover;
+	}
+
+	.progtitle {
+		font-size: 30px;
+	}
+
+	.cards {
+		width: 90%;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.card {
+		margin-top: 5%;
+		margin-bottom: 5%;
+		width: 30%;
+	}
+
+	.viewp {
+		display: none;
+		cursor: pointer;
+		font-size: 20px;
+		width: 70%;
+		margin: 0;
+	}
+
+}
+
+
+
+
 
 
 /* plans  */
 
-.pass{
+.pass {
 	background: rgba(255, 255, 255, 0.7);
 	width: 70%;
 	border-radius: 30px;
 	border: 5px solid #00e2ff;
-	height: 52vh;
+	height: fit-content;
 }
-.passt{
+
+.passt {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-bottom: 5%;
 }
-.passt h2{
+
+.passt h2 {
 	color: black;
-	font-size: 40px;
+	font-size: 35px;
 	margin-top: 8%;
-	margin-left: 45px;
+	padding-left: 8px;
 }
 
-.passt h3{
+.passt h3 {
 	color: black;
 	font-size: 40px;
 
 }
 
-.passt span{
+.passt span {
 	color: black;
 	font-size: 40px;
 	font-weight: lighter;
 }
 
-.conditions{
+.conditions {
 	display: flex;
 }
 
-.check{
+.check {
 	display: flex;
 	flex-direction: column;
-	justify-content:space-around;
+	justify-content: space-around;
 	width: 13%;
 }
 
 
-.avntgs li{
+.avntgs li {
 	color: black;
 	font-size: 25px;
 	line-height: 50px;
 }
-.joinplan{
+
+.joinplan {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -527,47 +824,147 @@ span.viewmore{
 
 }
 
-.joinplan span{
-	font-weight:600;
+.joinplan span {
+	font-weight: 600;
 	color: #FA1010;
 	margin-right: 20px;
 	font-size: 25px;
 }
 
-.joinplan img{
+.joinplan img {
 	width: 13%;
 }
 
 
-/* gallery */
+@media(min-width: 1024px) {
+	.pass {
+		/* height: 65vh; */
+		height: fit-content;
+		transition: transform 0.3s ease;
+	}
 
+	.pass:hover {
+		transform: scale(1.1);
+		border: 5px solid #FA1010;
+	}
+
+}
+
+
+/* gallery */
+.gallery {
+	background-color: black;
+}
+
+.gal {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.galtt {
+	display: none;
+}
+
+.galt h1 {
+	color: white;
+	text-align: center;
+	margin-top: 20%;
+	margin-bottom: 15%;
+}
+
+.galt span {
+	color: #00e2ff;
+}
+
+.cardg {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 10%;
+	margin-bottom: 10%;
+}
+
+.picc1 {
+	display: flex;
+	justify-content: center;
+}
+
+.picc1 img {
+	width: 300px;
+	height: 200px;
+}
+
+@media(min-width: 1024px) {
+
+	.devid {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 50px;
+	}
+
+	.galtt {
+		display: block;
+		font-size: 40px;
+	}
+
+	.galt {
+		display: none;
+	}
+
+	.galtt h1 {
+		color: white;
+		text-align: center;
+		margin: 0;
+	}
+
+	.galtt span {
+		color: #00e2ff;
+	}
+
+	.picc1 img {
+		width: 300px;
+		height: 250px;
+	}
+
+	.cardg :hover {
+
+		border: 3px solid #00e2ff;
+	}
+
+
+}
 
 /* register */
 
-.regtitle{
+.regtitle {
 	display: flex;
 	flex-direction: column;
 }
 
-.regtitle h1{
+.regtitle h1 {
 	color: #00e2ff;
 	text-align: center;
 	margin-top: 5%;
 	margin-bottom: 5%;
 	font-size: 40px;
 }
-.regtitle span{
-	color:white;
+
+.regtitle span {
+	color: white;
 }
 
-.reg{
+.reg {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap:12px;
-	
+	gap: 12px;
+
 }
-.reg input,select{
+
+.reg input,
+select {
 	background: rgba(255, 255, 255, 0.2);
 	border: 3px solid #00e2ff;
 	font-size: large;
@@ -575,18 +972,19 @@ span.viewmore{
 	padding: 6%;
 	border-radius: 20px;
 }
-select > option{
+
+select>option {
 	background: rgba(255, 255, 255, 0.2);
 	width: 75%;
 	border-radius: 20px;
 	color: black;
 }
 
-.reg input::placeholder{
+.reg input::placeholder {
 	color: white;
 }
 
-.regbtn{
+.regbtn {
 	background: rgba(255, 255, 255, 0.2);
 	border: 3px solid #00e2ff;
 	font-size: 20px;
@@ -599,49 +997,117 @@ select > option{
 	margin-bottom: 5%;
 }
 
+.error-message {
+	width: 50%;
+}
+
+.quote {
+	display: none;
+}
+
+/* register */
+@media(min-width: 1024px) {
+
+	.register {
+		width: 100%;
+		/* height: 120vh; */
+		height: fit-content;
+		background-image: url(../img/ffff.jpg);
+		background-size: cover;
+		display: flex;
+		width: 100%;
+		justify-content: space-evenly;
+	}
+
+	.regtitle h1 {
+		width: 80%;
+		margin: 0;
+
+	}
+
+	.quote {
+		display: block;
+		font-size: 40px;
+		width: 35%;
+	}
+
+	.reg {
+		margin-top: 10%;
+		width: 80%;
+		gap: 10px;
+	}
+
+	.reg input,
+	select {
+		font-size: 35px;
+		width: 150%;
+		padding: 3%;
+	}
+
+	.regbtn {
+		font-size: 40px;
+		width: 100%;
+	}
+
+	.error-message {
+		width: 120%;
+	}
+}
+
+
+
+
+
+
+
+
+
 /* footer */
 
-.f{
+.f {
 	background-color: #00e2ff;
 }
 
-.foot{
+.foot {
 	display: flex;
 	justify-content: space-evenly;
 	border-bottom: 3px solid black;
 }
-.info{
+
+.info {
 	width: 50%;
 	display: flex;
 	flex-direction: column;
 	gap: 1.5rem;
 }
 
-.infoicn{
+.infoicn {
 	display: flex;
 	flex-direction: column;
 	width: 50px;
 	justify-content: space-around;
 }
 
-.info span{
+.info span {
 	color: black;
 	font-size: 20px;
 	font-weight: bolder;
 }
 
-.info li{
+.info li {
 	color: black;
-	list-style:disc;
+	list-style: disc;
 }
-.contact{
+
+.contact {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap:20px;
-	
+	gap: 20px;
+
 }
-.contact input{
+
+.contact input {
 	background-color: transparent;
 	border: 3px solid black;
 	font-size: large;
@@ -650,7 +1116,8 @@ select > option{
 	border-radius: 8px;
 	color: black;
 }
-.contact textarea{
+
+.contact textarea {
 	background-color: transparent;
 	border: 3px solid black;
 	font-size: x-large;
@@ -660,16 +1127,20 @@ select > option{
 	color: black;
 
 }
-.contact input::placeholder, textarea::placeholder{
+
+.contact input::placeholder,
+textarea::placeholder {
 	color: black;
 }
-.titre{
+
+.titre {
 	color: black;
 	font-size: 25px;
 	font-weight: bolder;
 	margin-top: 5%;
 }
-.sub{
+
+.sub {
 	background-color: transparent;
 	border: 3px solid black;
 	font-size: 20px;
@@ -680,11 +1151,59 @@ select > option{
 	text-align: center;
 	color: black;
 }
-.copy{
+
+.copy {
 	text-align: center;
 	background-color: black;
 	width: 100%;
 	height: 7vh;
 	font-size: 20px;
 	padding-top: 5%;
+}
+
+@media(min-width: 1024px) {
+
+	.f {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		margin: auto;
+	}
+
+	.foot {
+		justify-content: center;
+		border-bottom: transparent;
+		gap: 40px;
+		border-right: 3px solid black;
+	}
+
+	.info {
+		justify-content: space-around;
+	}
+
+	.contact {
+		width: 50%;
+	}
+
+	.contact input {
+		width: 70%;
+	}
+
+	.contact textarea {
+		width: 70%;
+	}
+
+	.sub {
+		width: 20%;
+		padding: 2%;
+	}
+	.copy {
+		height: 15vh;
+		font-size: 40px;
+		padding-top: 3%;
+	}
+
+}
+.active3{
+	color: #00e2ff;
 }
